creusot/tests/should_fail/prusti/deref/expired1.stderr
error[creusot]: `&'post u32` cannot be moved from `'pre` to `'a` since it doesn't live long enough
                `'post` doesn't outlive `'a`
 --> expired1.rs:4:21
  |
4 | #[after_expiry('a, *x == 0u32)]
  |                     ^

error: aborting due to previous error

